feat(telemetry): wire desktop Registration Client metrics to TUSD ingestion backend
Signed-off-by: Yakshith K D <yakshithkd97@gmail.com>