@@ -6,43 +6,36 @@
 	<parent>
 		<groupId>io.mosip.registration</groupId>
 		<artifactId>registration-client-parent</artifactId>
-		<version>1.2.1-SNAPSHOT</version>
+		<version>1.2.0.2</version>
 	</parent>
 	<artifactId>registration-services</artifactId>
 	<name>registration-services</name>
 	<description>Maven project of MOSIP Registration Service</description>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.0.2</version>
 
 	<dependencies>
-		<!-- Lombok -->
+		<!-- Lombok   - version is updated due to version mismatching -->
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.38</version>
+     </dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.junit.vintage</groupId>
-			<artifactId>junit-vintage-engine</artifactId>
-			<version>5.10.2</version>
-		</dependency>
-		<dependency>
-            <groupId>jakarta.xml.bind</groupId>
-            <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>4.0.1</version>
-        </dependency>
-		<dependency>
 			<groupId>org.powermock</groupId>
-			<artifactId>powermock-module-junit4</artifactId>			
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>2.0.0-RC.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mvel</groupId>
 			<artifactId>mvel2</artifactId>
-			<version>2.5.2.Final</version>
+			<version>2.4.7.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -71,13 +64,20 @@
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
-			<artifactId>powermock-api-mockito2</artifactId>			
+			<artifactId>powermock-api-mockito2</artifactId>
+			<version>2.0.7</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>1.10.13</version>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>3.11.2</version>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.19</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
@@ -115,16 +115,7 @@
 					<groupId>com.fasterxml.jackson.core</groupId>
 					<artifactId>jackson-databind</artifactId>
 				</exclusion>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-    				<artifactId>spring-orm</artifactId>
-				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
-    		<groupId>org.springframework</groupId>
-    		<artifactId>spring-orm</artifactId>
-    		<version>6.1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
@@ -233,11 +224,6 @@
 			<artifactId>derbytools</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>net.bytebuddy</groupId>
-			<artifactId>byte-buddy</artifactId>
-			<version>${bytebuddy.version}</version>
-        </dependency>
-		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-logger-logback</artifactId>
 			<exclusions>
@@ -262,10 +248,6 @@
 				<exclusion>
 					<groupId>com.fasterxml.jackson.core</groupId>
 					<artifactId>jackson-databind</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-    				<artifactId>spring-orm</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -327,10 +309,7 @@
 			<artifactId>oshi-core</artifactId>
 			<version>3.6.2</version>
 		</dependency>
-		<dependency>
-    		<groupId>org.springframework</groupId>
-    		<artifactId>spring-context</artifactId>
-		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
@@ -380,6 +359,21 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-idobjectvalidator</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>io.mosip.kernel</groupId>
+					<artifactId>kernel-logger-logback</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-databind</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
 			<artifactId>kernel-biosdk-provider</artifactId>
 			<groupId>io.mosip.kernel</groupId>
 			<version>${mosip.core.kernel.version}</version>
@@ -396,7 +390,8 @@
 		</dependency>
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>		
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.commons</groupId>
@@ -459,7 +454,7 @@
 			<artifactId>spring-aspects</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+               <!-- tus client  -->
 		<dependency>
 			<groupId>io.tus.java.client</groupId>
 			<artifactId>tus-java-client</artifactId>
@@ -467,8 +462,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.mosip.kernel</groupId>
-			<artifactId>kernel-pdfgenerator</artifactId>
+			<groupId>io.mosip.registration</groupId>
+			<artifactId>registration-api</artifactId>
 			<version>${mosip.core.kernel.version}</version>
 			<exclusions>
 				<exclusion>
@@ -480,14 +475,8 @@
 
 		<dependency>
 			<groupId>io.mosip.registration</groupId>
-			<artifactId>registration-api</artifactId>
-			<version>${mosip.registration.client.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>io.mosip.kernel</groupId>
-					<artifactId>kernel-logger-logback</artifactId>
-				</exclusion>
-			</exclusions>
+			<artifactId>registration-api-stub-impl</artifactId>
+			<version>${mosip.core.kernel.version}</version>
 		</dependency>
 
 		<dependency>
@@ -506,6 +495,10 @@
 				<exclusion>
 					<groupId>com.fasterxml.jackson.core</groupId>
 					<artifactId>jackson-databind</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.hibernate.validator</groupId>
+    				<artifactId>hibernate-validator</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -535,39 +528,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${maven.surefire.plugin.version}</version>
-						<configuration>
-							<skipTests>false</skipTests>
-							<skip>false</skip>
-							<argLine>
-								${argLine}
-								--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
-								--add-opens java.base/java.lang=ALL-UNNAMED
-								--add-opens java.base/java.net=ALL-UNNAMED
-								--add-opens java.base/java.util=ALL-UNNAMED
-								--add-opens java.base/java.time=ALL-UNNAMED
-								--add-opens java.base/java.math=ALL-UNNAMED
-								--add-opens java.base/java.io=ALL-UNNAMED
-								--add-opens java.base/java.util.jar=ALL-UNNAMED
-								--add-opens java.base/java.security.cert=ALL-UNNAMED
-								--add-opens java.base/java.util.regex=ALL-UNNAMED
-								--add-opens java.base/java.util.stream=ALL-UNNAMED
-								--add-opens java.base/java.text=ALL-UNNAMED
-								--add-opens java.base/java.security=ALL-UNNAMED
-								--add-opens java.sql/java.sql=ALL-UNNAMED
-								--add-opens java.base/java.util.zip=ALL-UNNAMED
-								--add-opens java.base/java.lang.reflect=ALL-UNNAMED
-								--add-opens java.base/sun.security.util=ALL-UNNAMED
-								--add-exports java.base/jdk.internal.access=ALL-UNNAMED
-								--add-exports java.base/jdk.internal.util=ALL-UNNAMED
-								--add-exports java.desktop/sun.awt=ALL-UNNAMED
-								--add-exports java.desktop/sun.awt.util=ALL-UNNAMED
-								--add-exports java.desktop/sun.awt.image=ALL-UNNAMED
-								--add-exports java.desktop/sun.java2d=ALL-UNNAMED
-								--illegal-access=debug
-								--enable-preview
-							</argLine>
-						</configuration>
+						<version>2.12.4</version>
 						<!--<configuration><skipTests>true</skipTests></configuration>-->
 					</plugin>
 					<plugin>
@@ -603,44 +564,15 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${maven.surefire.plugin.version}</version>
+						<version>2.12.4</version>
 						<configuration>
 							<skipTests>false</skipTests>
-							<skip>false</skip>
-							<argLine>
-								${argLine}
-								--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
-								--add-opens java.base/java.lang=ALL-UNNAMED
-								--add-opens java.base/java.net=ALL-UNNAMED
-								--add-opens java.base/java.util=ALL-UNNAMED
-								--add-opens java.base/java.time=ALL-UNNAMED
-								--add-opens java.base/java.math=ALL-UNNAMED
-								--add-opens java.base/java.io=ALL-UNNAMED
-								--add-opens java.base/java.util.jar=ALL-UNNAMED
-								--add-opens java.base/java.security.cert=ALL-UNNAMED
-								--add-opens java.base/java.util.regex=ALL-UNNAMED
-								--add-opens java.base/java.util.stream=ALL-UNNAMED
-								--add-opens java.base/java.text=ALL-UNNAMED
-								--add-opens java.base/java.security=ALL-UNNAMED
-								--add-opens java.sql/java.sql=ALL-UNNAMED
-								--add-opens java.base/java.util.zip=ALL-UNNAMED
-								--add-opens java.base/java.lang.reflect=ALL-UNNAMED
-								--add-opens java.base/sun.security.util=ALL-UNNAMED
-								--add-exports java.base/jdk.internal.access=ALL-UNNAMED
-								--add-exports java.base/jdk.internal.util=ALL-UNNAMED
-								--add-exports java.desktop/sun.awt=ALL-UNNAMED
-								--add-exports java.desktop/sun.awt.util=ALL-UNNAMED
-								--add-exports java.desktop/sun.awt.image=ALL-UNNAMED
-								--add-exports java.desktop/sun.java2d=ALL-UNNAMED
-								--illegal-access=debug
-								--enable-preview
-							</argLine>
 							<excludes>
 								<exclude>**/integrationtest/*.java</exclude>
 							</excludes>
 						</configuration>
 					</plugin>
-				    <plugin>
+				                    <plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-antrun-plugin</artifactId>
 						<version>3.0.0</version>
@@ -686,6 +618,13 @@
 						<artifactId>maven-filtering</artifactId>
 						<version>1.3</version>
 					</dependency>
+
+					<!-- Tus client -->
+					     <dependency>
+    <groupId>io.tus.java.client</groupId>
+    <artifactId>tus-java-client</artifactId>
+    <version>0.4.3</version>
+</dependency>
 				</dependencies>
 				<configuration>
 					<delimiters>
